# ferrugo-ansi

./: CMakeLists.txt  README.md
include/ferrugo/ansi/: ansi.hpp  area.hpp  color.hpp  colors.hpp  context.hpp  default_context.hpp  element.hpp  escape.hpp  font.hpp  format.hpp  formatters.hpp  glyph.hpp  mb_string.hpp  multibyte_string.hpp  style.hpp
include/ferrugo/ansi2/: color.hpp  font.hpp  font_style.hpp  ostream_output.hpp  output.hpp  output_appliers.hpp  style_appliers.hpp
include/ferrugo/ansi3/: font_style.hpp  stream.hpp
include/ferrugo/ansi_v2/: color.hpp  context.hpp  default_context.hpp  element.hpp  escape.hpp  font.hpp  mb_string.hpp  style.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  ansi.test.cpp
